--- a/php-fpm-fastadmin/fastadmin.conf
+++ b/php-fpm-fastadmin/fastadmin.conf
@@ -24,4 +24,8 @@ server {
             fastcgi_param  PATH_TRANSLATED  $document_root$fastcgi_path_info;
             include        fastcgi_params;
         }
+
+        location ~* \.(css|js|png|jpg|jpeg|gif|icon)$ {
+            expires 1h;
+        }
 }
