--- a/nginx-proxy/proxy.conf
+++ b/nginx-proxy/proxy.conf
@@ -5,8 +5,8 @@ server {
         
         location / {
             proxy_set_header X-Forwarded-For proxy_add_x_forwarded_for;
-		    proxy_set_header Host $host;
-            proxy_pass HTTP_ADDRESS;
+	    proxy_set_header Host $host;
+            proxy_pass REMOTE_ADDRESS;
             proxy_buffering off;
 			proxy_http_version 1.1;
 			proxy_set_header Upgrade $http_upgrade;
